--- a/styleheet.css
+++ b/styleheet.css
@@ -4,19 +4,26 @@
   background-color:white;
   width:100%;
   height:100px}
-#left block {
+
+#left_block {
   position:relative;
   display:block;
   background-color:white;
   width:33%;
-  height:100px}
-#middle block {
+  height:100px;}
+
+#middle_block {
 position:relative;
 display:block;
 background-color:white;
 width:34%;
 height:100px}
-#right block {
+
+.half_page{
+  width: 50%;
+}
+
+#right_block {
 position:relative;
 display:block;
 background-color:white;
