--- a/styleheet.css
+++ b/styleheet.css
@@ -22,6 +22,12 @@ height:100px}
 .half_page{
   width: 50%;
 }
+.small_left_and_right{
+  width: 25%;
+}
+.wide_middle{
+  width:50%;
+}
 
 #right_block {
 position:relative;
